result/namespaces/err_7.xml.err
./test/namespaces/err_7.xml:1: error: Namespace prefix f on foo is not defined
<f:foo/>
      ^
